@@ -2,6 +2,7 @@ Changes in 4.0.1:
 - Make sure that the proper encoding is used when loading syndication filters
 - Display filename if TagLib doesn't know the title of a file in the mediaplayer plugin
 - Fix memory leak in plasma dataengine (238948)
+- Use routers XML file URL to distinguish between UPnP routers
 
 Changes in 4.0:
 - In Core::onExit shutdown TCP and UTP servers a bit later to prevent crashes
